--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
+    "axios": "^0.26.1",
     "discord-api-types": "^0.30.0",
     "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "node-cron": "^3.0.0",
+    "node-fetch": "^2.6.1",
+    "reddit-fetch": "^1.5.1"
   }
 }
