--- a/.github/workflows/build-master.yaml
+++ b/.github/workflows/build-master.yaml
@@ -11,4 +11,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: run docker build
-        run: docker build .
+        run: |
+          docker build .
