--- a/.github/workflows/build-master.yaml
+++ b/.github/workflows/build-master.yaml
@@ -9,8 +9,13 @@ jobs:
   build-image:
     runs-on: ubuntu-latest
     steps:
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: funky-monks/fleabot:latest
+          tags: aerben/fleabot:latest
