--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "fs": "^0.0.1-security",
+    "genius-lyrics": "^4.3.8",
+    "genius-lyrics-api": "^3.2.0",
     "html-entities": "^2.3.3",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
