--- a/package.json
+++ b/package.json
@@ -14,5 +14,16 @@
     "node-fetch": "^2.6.1",
     "node-tweet-stream": "^2.1.0",
     "reddit-fetch": "^1.5.1"
+  },
+  "devDependencies": {
+    "husky": "^7.0.4",
+    "lint-staged": "^12.4.1",
+    "prettier": "^2.6.2"
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
+  },
+  "scripts": {
+    "prepare": "husky install"
   }
 }
