--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
+    "async-retry": "^1.3.3",
     "axios": "^0.26.1",
     "discord-api-types": "^0.30.0",
     "discord.js": "^13.6.0",
@@ -18,7 +19,8 @@
   "devDependencies": {
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "winston": "^3.7.2"
   },
   "lint-staged": {
     "*.{js,css,md}": "prettier --write"
