--- a/package.json
+++ b/package.json
@@ -17,16 +17,26 @@
     "reddit-fetch": "^1.5.1"
   },
   "devDependencies": {
+    "@types/async-retry": "^1.4.4",
+    "@types/node": "^17.0.31",
+    "@types/node-cron": "^3.0.1",
+    "@types/typescript": "^2.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "ts-migrate": "^0.1.28",
+    "ts-node": "^10.7.0",
+    "tsc-watch": "^5.0.3",
+    "tslib": "^2.4.0",
+    "typescript": "^4.6.4",
     "winston": "^3.7.2"
   },
   "lint-staged": {
     "*.{js,css,md}": "prettier --write"
   },
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "dev-fleabot": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/fleabot.js\"",
+    "dev-deploy-commands": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/deploy-commands.js\""
   }
 }
