--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "genius-lyrics": "^4.3.8",
     "genius-lyrics-api": "^3.2.0",
     "html-entities": "^2.3.3",
+    "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
     "node-tweet-stream": "^2.1.0",
@@ -18,6 +20,8 @@
   },
   "devDependencies": {
     "@types/async-retry": "^1.4.4",
+    "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.5.30",
     "@types/node": "^17.0.31",
     "@types/node-cron": "^3.0.1",
     "@types/typescript": "^2.0.0",
@@ -38,7 +42,6 @@
   "scripts": {
     "prepare": "husky install",
     "dev-fleabot": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/fleabot.js\"",
-    "dev-deploy-commands": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/deploy-commands.js\"",
     "build": "rimraf ./dist && tsc"
   }
 }
