--- a/.github/workflows/build-master.yaml
+++ b/.github/workflows/build-master.yaml
@@ -1,4 +1,4 @@
-name: build-master
+name: deploy-master
 
 on:
   push:
@@ -6,16 +6,14 @@ on:
       - master
 
 jobs:
-  build-image:
+  deploy-to-bots_funkymonks_xyz:
     runs-on: ubuntu-latest
     steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: aerben/fleabot:latest
+    - name: Run playbook
+      uses: dawidd6/action-ansible-playbook@v2
+      with:
+        playbook: ./ansible/update-fleabot-playbook.yml
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        inventory: |
+          [bots.funkymonks.xyz]
+          5.161.130.142
