--- a/.github/workflows/build-master.yaml
+++ b/.github/workflows/build-master.yaml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+    - uses: actions/checkout@v3
+
     - name: Send CS start update message
       uses: appleboy/discord-action@master
       with:
