--- a/.github/workflows/build-master.yaml
+++ b/.github/workflows/build-master.yaml
@@ -23,7 +23,7 @@ jobs:
     - name: Run playbook
       uses: dawidd6/action-ansible-playbook@v2
       with:
-        playbook: ./github/workflows/ansible/update-fleabot-playbook.yml
+        playbook: ./.github/workflows/ansible/update-fleabot-playbook.yml
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         inventory: |
           [bots.funkymonks.xyz]
