--- a/.github/workflows/build-master.yaml
+++ b/.github/workflows/build-master.yaml
@@ -12,6 +12,21 @@ jobs:
 
     - uses: actions/checkout@v3
 
+    - name: Install Ansible
+      run: |
+        sudo apt update
+        sudo apt install software-properties-common
+        sudo add-apt-repository --yes --update ppa:ansible/ansible
+        sudo apt install ansible
+
+    - name: Install SSH key
+      run: |
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" >> ~/.ssh/id_rsa_bots        
+
+    - name: Run playbook
+      working-directory: ./.github/workflows/ansible
+      run: ansible-playbook update-fleabot-playbook.yml -i inventory.yml --key-file "~/.ssh/id_rsa_bots"
+
     - name: Send CS start update message
       uses: appleboy/discord-action@master
       with:
@@ -19,17 +34,6 @@ jobs:
         webhook_token: ${{ secrets.CS_DISCORD_WEBHOOK_TOKEN }}
         username: Fleabot updates
         args: Fleabot is being updated. Stay tuned...
-
-    - name: Run playbook
-      uses: dawidd6/action-ansible-playbook@v2
-      with:
-        playbook: ./.github/workflows/ansible/update-fleabot-playbook.yml
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        inventory: |
-          servers:
-            hosts:
-              bots.funkymonks.xyz:
-                ansible_host: "5.161.130.142"
 
     - name: Send CS end update message
       uses: appleboy/discord-action@master
