Correctly write ssh key

--- a/.github/workflows/build-master.yaml
+++ b/.github/workflows/build-master.yaml
@@ -21,7 +21,8 @@ jobs:
 
     - name: Install SSH key
       run: |
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" >> ~/.ssh/id_rsa_bots        
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa_bots        
 
     - name: Run playbook
       working-directory: ./.github/workflows/ansible
