--- a/.github/workflows/build-master.yaml
+++ b/.github/workflows/build-master.yaml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Run playbook
       working-directory: ./.github/workflows/ansible
-      run: ansible-playbook update-fleabot-playbook.yml -i inventory.yml --key-file "~/.ssh/id_rsa_bots"
+      run: ansible-playbook update-fleabot-playbook.yml -vvv -i inventory.yml --key-file "~/.ssh/id_rsa_bots"
 
     - name: Send CS start update message
       uses: appleboy/discord-action@master
