--- a/.github/workflows/build-master.yaml
+++ b/.github/workflows/build-master.yaml
@@ -19,17 +19,29 @@ jobs:
         sudo add-apt-repository --yes --update ppa:ansible/ansible
         sudo apt install ansible
 
+
+    - uses: DamianReeves/write-file-action
+      with:
+        path: ${{ env.home }}/.ssh/id_rsa_bots
+        contents: |
+          ${{ secrets.SSH_PRIVATE_KEY }}
+        write-mode: overwrite
+
+    - uses: DamianReeves/write-file-action
+      with:
+        path: ${{ env.home }}/.ssh/id_rsa_bots.pub
+        contents: |
+          ${{ secrets.SSH_PUBLIC_KEY }}
+        write-mode: overwrite
+
     - name: Install SSH key
       run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa_bots
-        echo "${{ secrets.SSH_PUBLIC_KEY }}" > ~/.ssh/id_rsa_bots.pub
-        diff <( ssh-keygen -y -e -f "~/.ssh/id_rsa_bots" ) <( ssh-keygen -y -e -f "~/.ssh/id_rsa_bots.pub" )
-        chmod 400 ~/.ssh/id_rsa.*
+        chmod -R 400 "${{ env.home }}/.ssh/id_rsa.*"
+        diff <( ssh-keygen -y -e -f "~/.ssh/id_rsa_bots" ) <( ssh-keygen -y -e -f "${{ env.home }}/.ssh/id_rsa_bots.pub" )
 
     - name: Run playbook
       working-directory: ./.github/workflows/ansible
-      run: ansible-playbook update-fleabot-playbook.yml -vvv -i inventory.yml --key-file "~/.ssh/id_rsa_bots"
+      run: ansible-playbook update-fleabot-playbook.yml -vvv -i inventory.yml --key-file "${{ env.home }}/.ssh/id_rsa_bots"
 
     - name: Send CS start update message
       uses: appleboy/discord-action@master
